--- a/src/css/QuestionPage.css
+++ b/src/css/QuestionPage.css
@@ -1,10 +1,10 @@
 .question-page {
     text-align: center; /* 텍스트 중앙 정렬 */
-    margin: 100px; /* 여백 설정 */
+    margin: 50px; /* 여백 설정 */
 }
 
 .question-page h2 {
-    margin-bottom: 20px; /* 제목 아래의 여백 */
+    margin-bottom: 10px; /* 제목 아래의 여백 */
 }
 
 .options {
@@ -29,3 +29,52 @@ button {
 button:hover {
     background-color: #e0e0e0; /* 호버 상태의 배경색 */
 }
+
+.progress-bar-wrapper {
+    display: flex;
+    align-items: center;  /* 세로 중앙 정렬 */
+    justify-content: center;  /* 가로 중앙 정렬 */
+    width: 30%;  /* 전체 너비 */
+    margin: 30px auto;  /* 상하 여백 설정 및 자동으로 좌우 여백 */
+    position: relative;  /* 상대 위치 */
+}
+
+.progress-bar-container {
+    flex-grow: 1;
+    background-color: #ddd;
+    height: 10px;
+    border-radius: 5px;
+    overflow: hidden;
+}
+
+.progress-bar {
+    height: 100%;
+    background-color: #808080;
+    width: 0; /* 초기 너비 설정 */
+    border-radius: 40px;
+    transition: width 0.5s ease-in-out; /* 애니메이션 효과 */
+}
+
+.progress-bar.animate {
+    animation: fillBar 0.5s forwards ease-in-out;
+}
+
+@keyframes fillBar {
+    from { width: 0; }
+    to { width: 25%; }
+}
+
+.progress-text {
+    position: absolute;
+    right: 0;
+    top: -20px;
+    font-size: 12px;
+    color: #333;
+}
+
+.options button {
+    margin: 20px;
+    padding: 20px 20px;
+    cursor: pointer;
+}
+
