--- a/src/css/Modal.css
+++ b/src/css/Modal.css
@@ -32,18 +32,18 @@
 }
 
 .modal-content button {
-    background-color: #f0f0f0; /* 버튼 배경색 */
-    border: none; /* 테두리 제거 */
-    border-radius: 20px; /* 버튼 모서리 둥글게 처리 */
-    padding: 10px 20px; /* 내부 여백 */
-    margin: 10px; /* 버튼 간 여백 */
-    width: 80%; /* 버튼 너비 */
-    max-width: 300px; /* 최대 너비 설정 */
-    box-shadow: 2px 2px 5px rgba(0,0,0,0.1); /* 그림자 효과 */
-    cursor: pointer; /* 커서 모양 변경 */
-    transition: background-color 0.3s; /* 배경색 변경 애니메이션 */
+    /*background-color: #f0f0f0; !* 버튼 배경색 *!*/
+    /*border: none; !* 테두리 제거 *!*/
+    /*border-radius: 20px; !* 버튼 모서리 둥글게 처리 *!*/
+    /*padding: 10px 20px; !* 내부 여백 *!*/
+    /*margin: 10px; !* 버튼 간 여백 *!*/
+    /*width: 80%; !* 버튼 너비 *!*/
+    /*max-width: 300px; !* 최대 너비 설정 *!*/
+    /*box-shadow: 2px 2px 5px rgba(0,0,0,0.1); !* 그림자 효과 *!*/
+    /*cursor: pointer; !* 커서 모양 변경 *!*/
+    /*transition: background-color 0.3s; !* 배경색 변경 애니메이션 *!*/
 }
 
 .modal-content button:hover {
-    background-color: #e0e0e0; /* 호버 상태의 배경색 */
+    /*background-color: #e0e0e0; !* 호버 상태의 배경색 *!*/
 }
