--- a/src/css/StartPage.css
+++ b/src/css/StartPage.css
@@ -2,10 +2,26 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    height: 100vh; /* 전체 뷰포트 높이 */
-    background-color: #f4f4f4; /* 배경 색상 */
-    padding: 20px;
+    justify-content: space-between;
+    height: 100vh;
+    padding: 30px 0;
+}
+
+header {
+    width: 100%;
+    text-align: center;
+}
+
+header > img {
+    width: 40%;
+}
+
+.section-title {
+    width: 100%;
+}
+
+.section-title > img {
+    width: 100%;
 }
 
 .start-page h2 {
@@ -13,19 +29,3 @@
     margin-bottom: 20px; /* 제목과 버튼 사이의 여백 */
 }
 
-.start-page button {
-    background-color: #f0f0f0; /* 버튼 배경색 */
-    border: none; /* 테두리 제거 */
-    border-radius: 20px; /* 버튼 모서리 둥글게 처리 */
-    padding: 10px 20px; /* 내부 여백 */
-    margin: 10px; /* 버튼 간 여백 */
-    width: 80%; /* 버튼 너비 */
-    max-width: 300px; /* 최대 너비 설정 */
-    box-shadow: 2px 2px 5px rgba(0,0,0,0.1); /* 그림자 효과 */
-    cursor: pointer; /* 커서 모양 변경 */
-    transition: background-color 0.3s; /* 배경색 변경 애니메이션 */
-}
-
-.start-page button:hover {
-    background-color: #e0e0e0; /* 호버 상태의 배경색 */
-}
