--- a/src/css/ResultPage.css
+++ b/src/css/ResultPage.css
@@ -1,31 +1,42 @@
 .result-page {
-    text-align: center; /* 중앙 정렬 */
-    padding: 20px; /* 패딩 설정 */
-    background-color: #fff; /* 배경색 설정 */
-    margin-top: 20px; /* 상단 여백 */
-    box-shadow: 0 4px 8px rgba(0,0,0,0.1); /* 박스 그림자 */
+    gap: 50px;
 }
 
-.result-page h2, .result-page h3 {
-    color: #333; /* 텍스트 색상 */
-    margin-bottom: 20px; /* 아래쪽 여백 */
+.result-section {
+    border: 5px solid #000;
+    width: 100%;
+    padding: 30px 0;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    border-radius: 20px;
 }
 
-.result-page ul {
-    list-style-type: none; /* 리스트 스타일 없앰 */
-    padding: 0; /* 패딩 초기화 */
+.result-intro {
+    font-size: 2em;
+    font-family: 'HakgyoansimNadeuriTTF-B';
 }
 
-.result-page li {
-    margin-bottom: 20px; /* 리스트 아이템 아래쪽 여백 */
+.result-title {
+    font-size: 3em;
+    font-family: 'TTWanjudaedunsancheB';
 }
+
+.books-section {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+}
+
 
 .result-page img {
-    width: 180px; /* 이미지 너비 */
+    /*width: 180px; !* 이미지 너비 *!*/
     height: auto; /* 이미지 높이 자동 */
     border-radius: 10px; /* 이미지 모서리 둥글게 */
 }
 
-.result-page h4, .result-page h5 {
-    margin: 10px 0; /* 상하 여백 */
+.buttons-section {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
 }
