--- a/src/css/Modal.css
+++ b/src/css/Modal.css
@@ -8,42 +8,57 @@
     display: flex;
     align-items: center;
     justify-content: center;
+
 }
 
 .modal-content {
     background-color: #fff;
-    padding: 20px;
+    padding: 30px 20px 20px;
     border-radius: 8px;
     width: 90%;
     max-width: 400px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
 }
 
-.modal-content h2 {
-    margin-top: 0;
+.modal-title {
+    font-size: 1.5em;
+    font-weight: 700;
+    padding: 0 0 10px;
 }
 
 .modal-content input {
     width: 100%;
-    padding: 10px;
+    padding: 15px;
     margin-top: 10px;
     border: 1px solid #ccc;
     border-radius: 4px;
+    font-size: 1.2em;
 }
 
-.modal-content button {
-    /*background-color: #f0f0f0; !* 버튼 배경색 *!*/
-    /*border: none; !* 테두리 제거 *!*/
-    /*border-radius: 20px; !* 버튼 모서리 둥글게 처리 *!*/
-    /*padding: 10px 20px; !* 내부 여백 *!*/
-    /*margin: 10px; !* 버튼 간 여백 *!*/
-    /*width: 80%; !* 버튼 너비 *!*/
-    /*max-width: 300px; !* 최대 너비 설정 *!*/
-    /*box-shadow: 2px 2px 5px rgba(0,0,0,0.1); !* 그림자 효과 *!*/
-    /*cursor: pointer; !* 커서 모양 변경 *!*/
-    /*transition: background-color 0.3s; !* 배경색 변경 애니메이션 *!*/
+.modal-buttons {
+    width: 100%;
+    display: flex;
+    gap: 10px;
+    align-items: center;
+    justify-content: center;
 }
 
-.modal-content button:hover {
-    /*background-color: #e0e0e0; !* 호버 상태의 배경색 *!*/
+.modal-btn {
+    width: 50%;
+    border: none;
+    padding: 10px;
+    font-size: 1em;
+}
+
+.modal-btn:first-child {
+    background-color: #000;
+    color: #fff;
+}
+
+.modal-btn:last-child {
+    background-color: #ddd;
 }
