--- a/src/css/ResultPage.css
+++ b/src/css/ResultPage.css
@@ -1,24 +1,37 @@
 .result-page {
-    gap: 50px;
+    gap: 30px;
 }
 
 .result-section {
-    border: 5px solid #000;
     width: 100%;
-    padding: 30px 0;
+    padding: 50px 20px 20px;
     -webkit-border-radius: 20px;
     -moz-border-radius: 20px;
     border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 40px;
 }
 
 .result-intro {
     font-size: 2em;
     font-family: 'HakgyoansimNadeuriTTF-B';
+    margin-bottom: 10px;
 }
 
 .result-title {
-    font-size: 3em;
-    font-family: 'TTWanjudaedunsancheB';
+    font-size: 4em;
+    font-family: 'BagelFatOne-Regular';
+    padding: 5px 50px 10px;
+    color: #fff;
+    -webkit-border-radius: 50px;
+    -moz-border-radius: 50px;
+    border-radius: 50px;
+}
+
+.result-text {
+    line-height: 1.5em;
 }
 
 .books-section {
@@ -27,11 +40,64 @@
     justify-content: space-around;
 }
 
+.book {
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+    align-items: center;
+}
 
-.result-page img {
-    /*width: 180px; !* 이미지 너비 *!*/
-    height: auto; /* 이미지 높이 자동 */
-    border-radius: 10px; /* 이미지 모서리 둥글게 */
+.book img {
+    width: 100%;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+    box-shadow: #dddddd55 5px 5px 7px 0;
+}
+
+.book-tag {
+    font-weight: 200;
+    font-size: .9em;
+}
+
+.book-title {
+    font-weight: 500;
+    text-decoration-line: underline;
+    text-decoration-style: wavy;
+    line-height: 1.3em;
+}
+
+.notice-img {
+    width: 100%;
+}
+
+.i-type {
+    border: 10px solid #fc5959;
+    background-color: #fffdf7;
+}
+
+.i-type .result-title {
+    background-color: #fc5959;
+    box-shadow: #FEDE95 5px 5px 0;
+}
+
+.i-type .book-title {
+    text-decoration-color: #ffbd32;
+}
+
+.e-type {
+    border: 10px solid #2FA599;
+    background-color: #F9FFFD;
+}
+
+.e-type .result-title {
+    background-color: #0D6D62;
+    box-shadow: #B8E5E0 5px 5px 0;
+}
+
+.e-type .book-title {
+    text-decoration-color: #72C98E;
 }
 
 .buttons-section {
@@ -40,3 +106,4 @@
     flex-direction: column;
     gap: 10px;
 }
+
